--- a/manifests/argocd/application.yaml
+++ b/manifests/argocd/application.yaml
@@ -1,17 +1,40 @@
+---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: pwc-task-app
+  name: python-app
   namespace: argocd
 spec:
-  project: pwc-task-project
+  project: default
   source:
-    repoURL: https://github.com/pwc-task/pwc-task.git
+    repoURL: https://github.com/alidesoki/pwc-task.git
     targetRevision: HEAD
     path: manifests/helm
   destination:
     server: https://kubernetes.default.svc
     namespace: default
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
+
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: monitoring
+  namespace: argocd
+spec:
+  project: default
+  source:
+    repoURL: https://github.com/alidesoki/pwc-task.git
+    targetRevision: HEAD
+    path: manifests/monitoring
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: monitoring
   syncPolicy:
     automated:
       prune: true
